Added custom authentication and jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = update
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+management.endpoints.web.cors.allowed-origins=https://localhost
+management.endpoints.web.cors.allowed-methods=GET,POST
+management.endpoint.health.show-details=always
+management.health.key.enabled = db
