--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = update
+#spring.security.strategy = MODE_GLOBAL
+
 
 
 management.endpoints.web.exposure.include=*
